// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly 1`] = `
Array [
  <button
    aria-checked={false}
    className="peer h-4 w-4 shrink-0 rounded-sm border border-slate-300 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-slate-700 dark:text-slate-50 dark:focus:ring-slate-400 dark:focus:ring-offset-slate-900"
    data-state="unchecked"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    type="button"
    value="on"
  />,
  <input
    aria-hidden={true}
    defaultChecked={false}
    style={
      Object {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;

exports[`Checkbox component should render correctly when component is disabled 1`] = `
Array [
  <button
    aria-checked={false}
    className="peer h-4 w-4 shrink-0 rounded-sm border border-slate-300 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-slate-700 dark:text-slate-50 dark:focus:ring-slate-400 dark:focus:ring-offset-slate-900"
    data-disabled=""
    data-state="unchecked"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    type="button"
    value="on"
  />,
  <input
    aria-hidden={true}
    defaultChecked={false}
    disabled={true}
    style={
      Object {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />,
]
`;

exports[`Checkbox component should render correctly when used alongside some label 1`] = `
<section
  className="flex items-center space-x-2"
>
  <button
    aria-checked={false}
    className="peer h-4 w-4 shrink-0 rounded-sm border border-slate-300 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-slate-700 dark:text-slate-50 dark:focus:ring-slate-400 dark:focus:ring-offset-slate-900"
    data-state="unchecked"
    id="terms"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    type="button"
    value="on"
  />
  <input
    aria-hidden={true}
    defaultChecked={false}
    style={
      Object {
        "margin": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "transform": "translateX(-100%)",
      }
    }
    tabIndex={-1}
    type="checkbox"
    value="on"
  />
  <label
    className="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    htmlFor="terms"
  >
    Accept terms and conditions
  </label>
</section>
`;
